gramatica atribuida - tipos